--- a/Proyecto-Integrador/src/app/app.component.html
+++ b/Proyecto-Integrador/src/app/app.component.html
@@ -1,3 +1,8 @@
 <section>
   <app-header></app-header>
+  <app-banner></app-banner>
+</section>
+<section>
+  <app-acercademi></app-acercademi>
+  <app-educacion></app-educacion>
 </section>
