--- a/Proyecto-Integrador/src/app/components/header/header.component.css
+++ b/Proyecto-Integrador/src/app/components/header/header.component.css
@@ -1,7 +1,42 @@
+
+.header-nav{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: 0 auto;
+}
 img{
     width: 200px;
+    margin-top: -10px;
+}
+.header-contact{
+    display: flex;
+    margin-top: 30px;
 }
 ul{
     list-style: none;
-    text-align: none;
+    display: flex;
+    margin-top: 5px;
+    text-decoration: none;
+}
+li{
+    margin-right: 10px;
+    text-decoration: none;
+}
+a{
+    text-decoration: none;
+    color: darkgray;
+    transition: all 300ms ease;
+}
+a:hover{
+    color: rgb(112, 112, 112);
+}
+
+button{
+    height: 40px;
+    margin-right: 20px;
+    transition: all 500ms ease;
+}
+.menu-responsive{
+    display: none;
 }
