--- a/Proyecto-Integrador/src/app/components/educacion/educacion.component.html
+++ b/Proyecto-Integrador/src/app/components/educacion/educacion.component.html
@@ -34,5 +34,7 @@
                 <span class="right-container-arrow"></span>
             </div>
         </div>
-    </div>
+        
+    </div> <hr>
+   
 </div>
