--- a/Proyecto-Integrador/src/app/components/skills/skills.component.html
+++ b/Proyecto-Integrador/src/app/components/skills/skills.component.html
@@ -1,1 +1,91 @@
-<p>skills works!</p>
+<div class="row">
+    <h2>Skills</h2>
+    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+        <h4>Front End</h4>
+        <div>
+            <p>HTML</p>
+           <div class="logo-bar-progress"> 
+            <img src="../../../assets/html.svg">
+            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" style="width: 80%">80%</div>
+             </div>
+            </div>
+        </div>
+        <div>
+            <p>CSS</p>
+           <div class="logo-bar-progress"> 
+            <img class="css-logo" src="../../../assets/css.png">
+            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" style="width: 88%">88%</div>
+             </div>
+            </div>
+        </div>
+        <div>
+            <p>React JS</p>
+           <div class="logo-bar-progress"> 
+            <img src="../../../assets/react.png">
+            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" style="width: 60%">60%</div>
+             </div>
+            </div>
+        </div>
+        <div>
+            <p>Angular</p>
+           <div class="logo-bar-progress"> 
+            <img src="../../../assets/angular.png">
+            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" style="width: 70%">70%</div>
+             </div>
+            </div>
+        </div>
+        <div>
+            <p>JavaScript</p>
+           <div class="logo-bar-progress"> 
+            <img class="javascript-logo" src="../../../assets/javascript.png">
+            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" style="width: 65%">65%</div>
+             </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+        <h4>Back End</h4>
+        <div>
+            <p>MySQL</p>
+           <div class="logo-bar-progress"> 
+            <img src="../../../assets/mysql.png">
+            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" style="width: 65%">65%</div>
+             </div>
+            </div>
+        </div>
+        <div>
+            <p>Node JS</p>
+           <div class="logo-bar-progress"> 
+            <img  src="../../../assets/nodejs.png">
+            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" style="width: 75%">75%</div>
+             </div>
+            </div>
+        </div>
+        <div>
+            <p>Java</p>
+           <div class="logo-bar-progress"> 
+            <img src="../../../assets/java.png">
+            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" style="width: 70%">70%</div>
+             </div>
+            </div>
+        </div>
+        <div>
+            <p>Php</p>
+           <div class="logo-bar-progress"> 
+            <img src="../../../assets/php.png">
+            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" style="width: 60%">60%</div>
+             </div>
+            </div>
+        </div>
+    </div>
+    <hr>    
+</div>
