--- a/Proyecto-Integrador/src/app/components/acercademi/acercademi.component.css
+++ b/Proyecto-Integrador/src/app/components/acercademi/acercademi.component.css
@@ -2,27 +2,30 @@
     max-width: 1300px;
     margin-left: auto;
     margin-right: auto;
+    z-index: 3000;
 }
 h2{
     text-align: center;
     font-family:Playfair Display;
     color: dimgray;
     font-weight:800;
+    padding-top:100px ;
 }
 
 img{
     display: flex;
     width: 250px;
     border: 4px solid;
-    border-color:dimgray;
+    border-color: dimgray;
     border-radius: 3px;
     margin-left: auto;
-    margin-right: auto;    
+    margin-right: auto; 
+    box-shadow:10px 10px 10px rgba(0, 0, 0, 0.3);   
 }
 h3{
     text-align: center;
     margin-top: 50px;
-    color: cadetblue;
+    color:rgb(240, 117, 117);
     font-family: Playfair Display;
 }
 p{
@@ -41,6 +44,7 @@ button{
     margin-top: 50px;
     background-color:dimgray;
     transition: all 300ms ease;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
 }
 button p{
     display: flex;
@@ -48,14 +52,18 @@ button p{
     color: azure;
 }
 button:hover{
-    background-color: cadetblue;
+    background-color: rgb(240, 117, 117);
+    box-shadow: 9px 11px 15px rgba(233, 67, 67, 0.3);
 }
-hr{
-  border: 3px solid black;
-  border-radius: 20px;
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 400px;
-  color: black;
+.divider::after{
+    content: '';
+    display: flex;
+    width: 100%;
+    max-width: 1200px;
+    height: 6px;
+    background-color:dimgray;
+    margin: 0 auto;
+    border-radius: 6px;
+    margin-top: 150px;
+    margin-bottom: -4px;
 }
