--- a/Proyecto-Integrador/src/app/components/acercademi/acercademi.component.html
+++ b/Proyecto-Integrador/src/app/components/acercademi/acercademi.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" id="acercademi">
     <h2>Acerca de mi</h2>
     <div class="col-sm-12 col-md-5 col-lg-5 col-xl-5"><img src="../../../assets/Wha_at_5.27.14_PM-removebg-preview.png" alt="">
     </div>
@@ -11,5 +11,5 @@
            </p> 
         </button>
     </div>
-    <hr>
+    <div class="divider"></div>
 </div>
