--- a/Proyecto-Integrador/src/app/components/educacion/educacion.component.html
+++ b/Proyecto-Integrador/src/app/components/educacion/educacion.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" id="educación">
     <h2 class="titule">Educación</h2>
     <div class="timeline">
         <div class="container right-container">
@@ -34,7 +34,6 @@
                 <span class="right-container-arrow"></span>
             </div>
         </div>
-        
-    </div> <hr>
-   
+    </div> 
+        <div class="divider"></div>
 </div>
