--- a/Proyecto-Integrador/src/app/app.component.css
+++ b/Proyecto-Integrador/src/app/app.component.css
@@ -1,3 +1,11 @@
+*{
+    scroll-behavior: smooth;
+}
 app-acercademi{
     margin: 0 auto;
+    opacity: 1;
+    z-index: 1;
+}
+app-proyecto{
+    background-color: rgb(240, 117, 117);
 }
