--- a/Proyecto-Integrador/src/app/app.component.html
+++ b/Proyecto-Integrador/src/app/app.component.html
@@ -1,3 +1,4 @@
+
 <section>
   <app-header></app-header>
   <app-banner></app-banner>
@@ -6,4 +7,6 @@
   <app-acercademi></app-acercademi>
   <app-educacion></app-educacion>
   <app-skills></app-skills>
+  <app-proyecto></app-proyecto>
 </section>
+<app-footer></app-footer>
