--- a/Proyecto-Integrador/src/app/components/banner/banner.component.css
+++ b/Proyecto-Integrador/src/app/components/banner/banner.component.css
@@ -1,41 +1,41 @@
 div{
     text-align: center;
-    margin-top: 200px;
+    padding-top: 200px;
     max-width: 1300px;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 300px;
+    color: whitesmoke;
 }
 h1{
     font-family: Playfair Display;
-    color:dimgray ;
+    color:dimgray;
     font-size: 4em;
 }
 .hola{
-    color: cadetblue;
+    color:dimgray;
+    font-size: 2.5em;
 }
 p{
     width: 350px;
     margin-left: auto;
     margin-right: auto;
     font-family: Roboto Condensed;
-    color: dimgray;
-    font-size: 1.5em;
-    font-weight: 550;
+    color: rgb(240, 117, 117);
+    font-size: 1.4em;
 }
 span{
-    color: cadetblue;
+    color: rgb(240, 117, 117);
 }
 .scroll-bottom{
     text-decoration: none;
     margin-top: 200px;
-    margin-bottom: 200px;
-
 }
 svg{
-    color: cadetblue;
+    color:rgb(240, 117, 117);
     transition: all 300ms ease;
 }
 svg:hover{
     transform: scale(1.3,1.3);
-    color: rgb(28, 184, 184);
+    color: rgb(207, 60, 60);
 }
