--- a/Proyecto-Integrador/src/app/components/skills/skills.component.css
+++ b/Proyecto-Integrador/src/app/components/skills/skills.component.css
@@ -2,7 +2,7 @@
     max-width: 1300px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 70px;
+    padding-top: 150px;
     display: flex;
 }
 h2{
@@ -12,15 +12,28 @@ h2{
     text-align: center;
 }
 .progress{
-    height: 15px;
+    height: 12px;
     width: 400px;
+    box-shadow: 0px 10px 10px rgba(15, 15, 15, 0.3);
+    background-color: rgba(180, 180, 180, 0.2);
 }
 .progress-bar{
-    background-color: cadetblue;
+    background-color: dimgray;
+    animation: moveline-bar 1.5s linear forwards;
 }
+@keyframes moveline-bar{
+    0%{
+        width:0;
+    }
+    100%{
+        width: 100;
+    }
+}
+
 h4{
     text-align: center;
-    color:rgb(233, 121, 121);
+    color:rgb(233, 70, 70);
+    margin-top: 40px;
 }
 p{
     margin-bottom: 0;
@@ -32,7 +45,8 @@ p{
     text-align: center;
 }
 img{
-    width: 30px;
+    width: 25px;
+    margin-right: 10px;
     
 }
 .logo-bar-progress{
@@ -42,22 +56,30 @@ img{
     justify-content: center;
 }
 .css-logo{
-    width: 28px;
+    width: 23px;
 }
 .javascript-logo{
-    width: 35px;
-    height: 30px;
+    width: 33px;
 }
-.col-sm-12{
-    margin-left: auto;
-    margin-right: auto;
-}
-hr{
-    border: 3px solid black;
-    border-radius: 20px;
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 400px;
-    color: black;
+
+  .ruby-image{
+    width: 25px;
   }
+  .creatividad-image{
+    width: 40px;
+  }
+  .col-sm-12{
+    margin-top: 20px;
+  }
+  .divider::after{
+    content: '';
+    display: flex;
+    max-width: 1300px;
+    height: 6px;
+    background-color:dimgray;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 6px;
+    margin-top: 150px;
+    margin-bottom: -4px;
+}
