--- a/Proyecto-Integrador/src/app/components/skills/skills.component.html
+++ b/Proyecto-Integrador/src/app/components/skills/skills.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" id="skills">
     <h2>Skills</h2>
     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
         <h4>Front End</h4>
@@ -86,6 +86,55 @@
              </div>
             </div>
         </div>
+        <div>
+            <p>Ruby</p>
+           <div class="logo-bar-progress"> 
+            <img class="ruby-image" src="../../../assets/ruby.png">
+            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" style="width: 60%">60%</div>
+             </div>
+            </div>
+        </div>
     </div>
-    <hr>    
+    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+        <h4>Otros</h4>
+        <div>
+            <p>Trabajo en equipo</p>
+           <div class="logo-bar-progress"> 
+            <img class="equipo-image" src="../../../assets/trabajoenequipo.png">
+            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" style="width: 80%">80%</div>
+             </div>
+            </div>
+        </div>
+        <div>
+            <p>Comunicación</p>
+           <div class="logo-bar-progress"> 
+            <img class="css-logo" src="../../../assets/comunicacion.png">
+            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" style="width: 70%">70%</div>
+             </div>
+            </div>
+        </div>
+        <div>
+            <p>Creatividad</p>
+           <div class="logo-bar-progress"> 
+            <img class="creatividad-image" src="../../../assets/creatividad.png">
+            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" style="width: 80%">80%</div>
+             </div>
+            </div>
+        </div>
+        <div>
+            <p>Adaptabilidad</p>
+           <div class="logo-bar-progress"> 
+            <img src="../../../assets/adaptabilidad.png">
+            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" style="width: 90%">90%</div>
+             </div>
+            </div>
+        </div>
+    </div>  
+    <div class="divider">
+      </div>
 </div>
