--- a/Proyecto-Integrador/FrontEnd/src/app/components/skills/skills.component.html
+++ b/Proyecto-Integrador/FrontEnd/src/app/components/skills/skills.component.html
@@ -22,7 +22,7 @@
   [innerStrokeColor]="'#C7E596'"
   [animation]="true"
   [animationDuration]="600">
-a</circle-progress>
+</circle-progress>
 
 <div *ngIf="isLogged">
     <button type="button" class="edit" routerLink="/editskill/{{skill.id}}">
@@ -38,8 +38,5 @@ a</circle-progress>
 
 </div>
     </div>
-    
-    
-
    
 </div>
