--- a/Proyecto-Integrador/FrontEnd/src/app/components/skills/edit-skill.component.html
+++ b/Proyecto-Integrador/FrontEnd/src/app/components/skills/edit-skill.component.html
@@ -1,34 +1,17 @@
-<section class="vh-100">
-    <div class="container py-5 h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="" style="border-radius: 1rem;">
-            <div *ngIf="skill" class="card-body p-5 text-center">
-  
-              <h3 class="mb-5">Nueva Skill</h3>
-  <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
-              <div class="form-outline mb-4">
-                <input type="text" id="nombre" name="nombre" class="form-control form-control-lg" [(ngModel)]="skill.nombre" required/>
-                <label class="form-label" for="nombre">Nombre Skill</label>
-              </div>
-  
-              <div class="form-outline mb-4">
-                <input type="text" id="porcentaje" name="porcentaje" class="form-control form-control-lg" [(ngModel)]="skill.porcentaje" required/>
-                <label class="form-label" for="porcentaje">porcentaje</label>
-              </div>
-  
-              
-  
-              <button class="btn btn-primary btn-lg btn-block" type="submit">Aceptar</button>
-  </form>
-              <hr class="my-4">
-  
-              <p>Thank you</p>
-  
-            </div>
-          </div>
+<div class="container" *ngIf="skill">
+  <div class="row">
+    <div>
+      <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
+        <div class="form-group">
+          <label for="nombre">Nombre de la Skill</label>
+          <input type="text" class="form-control" name="nombre" id="nombre" [(ngModel)]="skill.nombre" required>
         </div>
-      </div>
+        <div class="form-group">
+          <label for="porcentaje">Ingresar el porcentaje</label>
+          <input type="text" class="form-control" name="porcentaje" id="porcentaje" [(ngModel)]="skill.porcentaje" required>
+        </div>
+        <button class="btn btn-primary"> Actualizar</button>
+      </form>
     </div>
-  </section>
-
+  </div>
+</div>
