--- a/Proyecto-Integrador/FrontEnd/src/app/components/educacion/educacion.component.css
+++ b/Proyecto-Integrador/FrontEnd/src/app/components/educacion/educacion.component.css
@@ -165,9 +165,9 @@ p{
     color: rgb(255, 255, 255);
   }
   .edit{
-    background-color: rgb(41, 41, 41);
+    background-color: rgb(73, 73, 73);
     border-radius: 10px;
-    border: solid  rgb(41, 41, 41);
+    border: solid  rgb(73, 73, 73);
     box-shadow: 9px 11px 15px rgba(77, 77, 77, 0.3);
   }
   .edit svg{
@@ -179,10 +179,11 @@ p{
     box-shadow: 9px 11px 15px rgba(233, 67, 67, 0.3);
   }
   .delete{
-    background-color: rgb(41, 41, 41);
+    background-color: rgb(73, 73, 73);
     border-radius: 10px;
-    border: solid  rgb(41, 41, 41);
+    border: solid  rgb(73, 73, 73);
     box-shadow: 9px 11px 15px rgba(77, 77, 77, 0.3);
+    margin-left: 7px;
   }
   .delete svg{
     color: whitesmoke;
@@ -192,11 +193,4 @@ p{
     border: solid rgb(240, 117, 117);
     box-shadow: 9px 11px 15px rgba(233, 67, 67, 0.3);
   }
-  button.btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 170px;
-    margin: 0 auto;
-    height: 30px;
-  }
+  
