--- a/Proyecto-Integrador/FrontEnd/src/app/components/skills/skills.component.css
+++ b/Proyecto-Integrador/FrontEnd/src/app/components/skills/skills.component.css
@@ -74,3 +74,40 @@ img{
  button.btn{
     margin: 0 auto;
  }
+ .edit{
+    background-color: rgb(73, 73, 73);
+    border-radius: 10px;
+    border: solid  rgb(73, 73, 73);
+    box-shadow: 9px 11px 15px rgba(77, 77, 77, 0.3);
+  }
+  .edit svg{
+    color: whitesmoke;
+  }
+  .edit:hover{
+    background-color: rgb(240, 117, 117);
+    border: solid rgb(240, 117, 117);
+    box-shadow: 9px 11px 15px rgba(233, 67, 67, 0.3);
+  }
+  .delete{
+    background-color: rgb(73, 73, 73);
+    border-radius: 10px;
+    border: solid  rgb(73, 73, 73);
+    box-shadow: 9px 11px 15px rgba(77, 77, 77, 0.3);
+    margin-left: 7px;
+  }
+  .delete svg{
+    color: whitesmoke;
+  }
+  .delete:hover{
+    background-color: rgb(240, 117, 117);
+    border: solid rgb(240, 117, 117);
+    box-shadow: 9px 11px 15px rgba(233, 67, 67, 0.3);
+  }
+  button.btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 170px;
+    margin: 0 auto;
+    height: 30px;
+  }
