--- a/Proyecto-Integrador/FrontEnd/src/app/components/skills/skills.component.html
+++ b/Proyecto-Integrador/FrontEnd/src/app/components/skills/skills.component.html
@@ -3,7 +3,7 @@
     <div class="col-lg-2">
             <button type="button" routerLink="/newskill" class="btn btn-dark" *ngIf="isLogged"> Nueva Skill</button>
         </div>
-    <div  *ngFor="let skill of skill">
+    <div  class="text-center col-sm-3 col-md-3 col-lg-3" *ngFor="let skill of skill">
         
         <circle-progress
   [percent]="(skill.porcentaje)"
@@ -18,8 +18,8 @@
   [showSubtitle]="false"
   [outerStrokeWidth]="16"
   [innerStrokeWidth]="2"
-  [outerStrokeColor]="'#78C000'"
-  [innerStrokeColor]="'#C7E596'"
+  [outerStrokeColor]="'#F35050'"
+  [innerStrokeColor]="'#4D4D4D'"
   [animation]="true"
   [animationDuration]="600">
 </circle-progress>
