--- a/Proyecto-Integrador/FrontEnd/src/app/components/educacion/editeducacion.component.html
+++ b/Proyecto-Integrador/FrontEnd/src/app/components/educacion/editeducacion.component.html
@@ -1,33 +1,17 @@
-<section class="vh-100">
-    <div   class="container py-5 h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="" style="border-radius: 1rem;">
-            <div *ngIf="educacion"  class="card-body p-5 text-center">
-  
-              <h3 class="mb-5">Editar educación</h3>
-  <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
-              <div class="form-outline mb-4">
-                <input type="text" id="nombreE" name="nombreE" class="form-control form-control-lg" [(ngModel)]="educacion.nombreE" required/>
-                <label class="form-label" for="nombreE">Nombre de la Educación</label>
-              </div>
-  
-              <div class="form-outline mb-4">
-                <input type="text" id="descripcionE" name="descripcionE" class="form-control form-control-lg" [(ngModel)]="educacion.descripcionE" required/>
-                <label class="form-label" for="descripcionE">Descripción de sus estudios</label>
-              </div>
-  
-              
-  
-              <button class="btn btn-primary btn-lg btn-block" type="submit">Agregar Educación</button>
-  </form>
-              <hr class="my-4">
-  
-              <p>Thank you</p>
-  
-            </div>
-          </div>
+<div class="container" *ngIf="educacion">
+  <div class="row">
+    <div>
+      <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
+        <div class="form-group">
+          <label for="nombreE">Nombre de la Skill</label>
+          <input type="text" class="form-control" name="nombreE" id="nombreE" [(ngModel)]="educacion.nombreE" required>
         </div>
-      </div>
+        <div class="form-group">
+          <label for="porcentaje">Ingresar el porcentaje</label>
+          <input type="text" class="form-control" name="descripcionE" id="descripcionE" [(ngModel)]="educacion.descripcionE" required>
+        </div>
+        <button class="btn btn-primary"> Actualizar</button>
+      </form>
     </div>
-  </section>
+  </div>
+</div>
