--- a/Proyecto-Integrador/FrontEnd/src/app/components/skills/skills.component.html
+++ b/Proyecto-Integrador/FrontEnd/src/app/components/skills/skills.component.html
@@ -1,6 +1,6 @@
 <div class="row" id="skills">
     <h2>Skills</h2>
-    <div class="col-lg-2">
+    <div class="col-12">
             <button type="button" routerLink="/newskill" class="btn btn-dark" *ngIf="isLogged"> Nueva Skill</button>
         </div>
     <div  class="text-center col-sm-3 col-md-3 col-lg-3" *ngFor="let skill of skill">
