--- a/Proyecto-Integrador/FrontEnd/src/app/components/educacion/editeducacion.component.html
+++ b/Proyecto-Integrador/FrontEnd/src/app/components/educacion/editeducacion.component.html
@@ -1,17 +1,21 @@
-<div class="container" *ngIf="educacion">
-  <div class="row">
-    <div>
-      <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
-        <div class="form-group">
-          <label for="nombreE">Nombre de la Skill</label>
-          <input type="text" class="form-control" name="nombreE" id="nombreE" [(ngModel)]="educacion.nombreE" required>
-        </div>
-        <div class="form-group">
-          <label for="porcentaje">Ingresar el porcentaje</label>
-          <input type="text" class="form-control" name="descripcionE" id="descripcionE" [(ngModel)]="educacion.descripcionE" required>
-        </div>
-        <button class="btn btn-primary"> Actualizar</button>
-      </form>
+<section class="vh-100">
+  <div class="container" *ngIf="educacion">
+    <div class="row">
+      <div>
+        <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
+          <div class="form-group">
+            <label for="nombreE">Nombre de la Skill</label>
+            <input type="text" class="form-control" name="nombreE" id="nombreE" [(ngModel)]="educacion.nombreE"
+              required>
+          </div>
+          <div class="form-group">
+            <label for="porcentaje">Ingresar el porcentaje</label>
+            <input type="text" class="form-control" name="descripcionE" id="descripcionE"
+              [(ngModel)]="educacion.descripcionE" required>
+          </div>
+          <button class="btn btn-primary"> Actualizar</button>
+        </form>
+      </div>
     </div>
   </div>
-</div>
+</section>
