--- a/Proyecto-Integrador/FrontEnd/src/app/components/skills/edit-skill.component.html
+++ b/Proyecto-Integrador/FrontEnd/src/app/components/skills/edit-skill.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="skill">
+<section class="vh-100"><div class="container" *ngIf="skill">
   <div class="row">
     <div>
       <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
@@ -15,3 +15,4 @@
     </div>
   </div>
 </div>
+</section>
