--- a/Proyecto-Integrador/FrontEnd/src/app/components/skills/skills.component.css
+++ b/Proyecto-Integrador/FrontEnd/src/app/components/skills/skills.component.css
@@ -4,6 +4,7 @@
     margin-right: auto;
     padding-top: 150px;
     display: flex;
+    padding: 100px;
 }
 h2{
     color: dimgray;
@@ -110,4 +111,11 @@ img{
     width: 170px;
     margin: 0 auto;
     height: 30px;
+  }
+
+  @media screen and (max-width:900px){
+    .circlee {
+      width: 100px;
+      height: 100px;
+    }
   }
