--- a/Proyecto-Integrador/FrontEnd/src/app/components/educacion/editeducacion.component.html
+++ b/Proyecto-Integrador/FrontEnd/src/app/components/educacion/editeducacion.component.html
@@ -4,12 +4,12 @@
       <div>
         <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
           <div class="form-group">
-            <label for="nombreE">Nombre de la Skill</label>
+            <label for="nombreE">Nombre de la Educación</label>
             <input type="text" class="form-control" name="nombreE" id="nombreE" [(ngModel)]="educacion.nombreE"
               required>
           </div>
           <div class="form-group">
-            <label for="porcentaje">Ingresar el porcentaje</label>
+            <label for="descripcionE">Descripción</label>
             <input type="text" class="form-control" name="descripcionE" id="descripcionE"
               [(ngModel)]="educacion.descripcionE" required>
           </div>
