--- a/FrontEnd/src/app/components/acercademi/acercademi.component.html
+++ b/FrontEnd/src/app/components/acercademi/acercademi.component.html
@@ -11,10 +11,10 @@
     <div class="col-sm-12 col-md-7 col-lg-7 col-xl-7">
         <h3>Mi introducción</h3>
         <p>{{persona.descripcion}} </p>
-        <button>
+         <a id="download" download="MiCV" href="../../../assets/Blue Light Blue Color Blocks Flight Attendant CV (1).pdf"><button>
            <p>Descargar CV 
            </p> 
-        </button>
+        </button></a>
     </div>
    
 </div>
